[package]
name = "pecos-chromobius"
version.workspace = true
edition.workspace = true
readme = "README.md"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Chromobius color code decoder for PECOS"

[dependencies]
pecos-decoder-core.workspace = true
pecos-pymatching.workspace = true
ndarray.workspace = true
thiserror.workspace = true
cxx.workspace = true

[build-dependencies]
pecos-build.workspace = true
cxx-build.workspace = true
cc.workspace = true
env_logger.workspace = true
log.workspace = true

[lib]
name = "pecos_chromobius"

[lints]
workspace = true
