[package]
name = "pecos-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Provides core definitions and functions for PECOS simulations."

[dependencies]
bitvec.workspace = true
rand.workspace = true
rand_chacha.workspace = true
num-traits.workspace = true
num-complex.workspace = true
thiserror.workspace = true
# Optional dependencies for error conversions
anyhow = { workspace = true, optional = true }

[features]
default = []
anyhow = ["dep:anyhow"]

[lints]
workspace = true
