[package]
name = "pecos-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Core types and utilities for PECOS"
readme = "README.md"

[dependencies]
bitvec.workspace = true
rand.workspace = true
rand_core.workspace = true
pecos-rng.workspace = true
num-traits.workspace = true
num-complex.workspace = true
smallvec.workspace = true
thiserror.workspace = true
# Optional dependencies for error conversions
anyhow = { workspace = true, optional = true }
# Optional serde support
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
# Optional approx support for approximate angle comparison traits
approx = { workspace = true, optional = true }

[dev-dependencies]
rand_xoshiro.workspace = true
serde_json.workspace = true
approx.workspace = true

[features]
default = []
anyhow = ["dep:anyhow"]
serde = ["dep:serde"]
json = ["serde", "dep:serde_json"]
approx = ["dep:approx"]

[lints]
workspace = true
