[package]
name = "pecos-cuquantum-sys"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
description = "Raw FFI bindings to NVIDIA cuQuantum SDK"
keywords = ["quantum", "cuda", "nvidia", "cuquantum", "ffi"]
categories = ["external-ffi-bindings", "science"]
readme = "README.md"

[dependencies]
libloading.workspace = true
libc.workspace = true
log.workspace = true
thiserror.workspace = true
dirs.workspace = true

[build-dependencies]
bindgen.workspace = true
pecos-build.workspace = true
log.workspace = true
env_logger.workspace = true

[features]
default = []

[package.metadata.docs.rs]
# Don't try to build docs on docs.rs (no CUDA/cuQuantum available)
targets = []
