[package]
name = "pecos-cuquantum"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
description = "Safe Rust wrapper for NVIDIA cuQuantum quantum simulation SDK"
keywords = ["quantum", "simulation", "cuda", "nvidia", "gpu"]
categories = ["science", "simulation"]
readme = "README.md"

[dependencies]
pecos-cuquantum-sys = { path = "../pecos-cuquantum-sys" }
pecos-build = { path = "../pecos-build" }
pecos-core = { path = "../pecos-core" }
pecos-qsim = { path = "../pecos-qsim" }
thiserror = "2.0"
fastrand = "2.3"

[build-dependencies]
pecos-build = { path = "../pecos-build" }
log.workspace = true
env_logger.workspace = true

[dev-dependencies]
# For testing, we don't actually need CUDA - tests use stub mode
criterion = { version = "0.5", features = ["html_reports"] }

[features]
default = []
# Enable this feature when cuQuantum is installed and you want to run integration tests
integration-tests = []

[package.metadata.docs.rs]
# Don't try to build docs on docs.rs (no CUDA/cuQuantum available)
targets = []

[[bench]]
name = "cuquantum_benchmark"
harness = false
required-features = ["integration-tests"]
