[package]
name = "pecos-cuquantum"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
description = "Safe Rust wrapper for NVIDIA cuQuantum quantum simulation SDK"
keywords = ["quantum", "simulation", "cuda", "nvidia", "gpu"]
categories = ["science", "simulation"]
readme = "README.md"

[dependencies]
pecos-cuquantum-sys.workspace = true
pecos-build.workspace = true
pecos-core.workspace = true
pecos-qsim.workspace = true
thiserror.workspace = true
fastrand.workspace = true

[build-dependencies]
pecos-build.workspace = true
log.workspace = true
env_logger.workspace = true

[features]
default = []
# Enable this feature when cuQuantum is installed and you want to run integration tests
integration-tests = []

[package.metadata.docs.rs]
# Don't try to build docs on docs.rs (no CUDA/cuQuantum available)
targets = []
