[package]
name = "pecos-decoders"
version.workspace = true
edition.workspace = true
readme = "README.md"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Unified decoder meta-crate for PECOS"

[dependencies]
pecos-decoder-core.workspace = true
pecos-ldpc-decoders = { workspace = true, optional = true }
pecos-fusion-blossom = { workspace = true, optional = true }
pecos-mwpf = { workspace = true, optional = true }
pecos-pymatching = { workspace = true, optional = true }
pecos-tesseract = { workspace = true, optional = true }
pecos-chromobius = { workspace = true, optional = true }
pecos-relay-bp = { workspace = true, optional = true }
pecos-uf-decoder = { workspace = true, optional = true }

[features]
default = []
ldpc = ["dep:pecos-ldpc-decoders"]
fusion-blossom = ["dep:pecos-fusion-blossom"]
mwpf = ["dep:pecos-mwpf"]
pymatching = ["dep:pecos-pymatching"]
tesseract = ["dep:pecos-tesseract"]
chromobius = ["dep:pecos-chromobius"]
relay-bp = ["dep:pecos-relay-bp"]
uf = ["dep:pecos-uf-decoder"]
all = ["ldpc", "fusion-blossom", "mwpf", "pymatching", "tesseract", "chromobius", "relay-bp", "uf"]

[lints]
workspace = true
