[package]
name = "pecos-engines"
version.workspace = true
edition.workspace = true
readme.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Provides simulator engines for PECOS simulations."


[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rayon.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
rand.workspace = true
rand_chacha.workspace = true
rand_distr = "0.4.3"
bytemuck.workspace = true
bitflags.workspace = true
dyn-clone.workspace = true
libloading.workspace = true
regex.workspace = true

pecos-core.workspace = true
pecos-qsim.workspace = true

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
