[package]
name = "pecos-engines"
version.workspace = true
edition.workspace = true
readme = "README.md"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Simulation engine infrastructure for PECOS"

[lib]
crate-type = ["rlib"]

[dependencies]
rayon.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
rand.workspace = true
bytemuck.workspace = true
bitflags.workspace = true
dyn-clone.workspace = true
num-bigint.workspace = true
bitvec.workspace = true

pecos-core.workspace = true
pecos-simulators.workspace = true
pecos-random.workspace = true

[lints]
workspace = true
