[package]
name = "pecos-experimental"
version.workspace = true
edition.workspace = true
readme.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Experimental APIs for PECOS - unstable, may change without notice."
publish = false

[lib]
crate-type = ["rlib"]

[dependencies]
# Can depend on any internal crate - this is the staging area
pecos-core.workspace = true
pecos-rng.workspace = true
pecos-qsim.workspace = true
pecos-quantum.workspace = true
rand.workspace = true
wide.workspace = true

[lints]
workspace = true
