[package]
name = "pecos-ffi"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Universal C-ABI shared library for using PECOS from any language"
publish = false

[lib]
name = "pecos_ffi"
crate-type = ["cdylib"]

[dependencies]
pecos-foreign.workspace = true

[lints]
workspace = true
