[package]
name = "pecos-gpu-sims"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Cross-platform GPU quantum simulators (wgpu-based)"
readme = "README.md"

[[bin]]
name = "gpu-check"
path = "src/bin/gpu_check.rs"

[dependencies]
wgpu.workspace = true
pollster.workspace = true
bytemuck.workspace = true
rand.workspace = true
rand_core.workspace = true
log.workspace = true
serde_json.workspace = true

# PECOS integration
pecos-core.workspace = true
pecos-simulators.workspace = true
pecos-random.workspace = true

[dev-dependencies]
approx.workspace = true
paste.workspace = true
env_logger.workspace = true
pecos-qec.workspace = true
pecos-quantum.workspace = true

[lints]
workspace = true
