[package]
name = "pecos-hugr-llvm"
version.workspace = true
edition.workspace = true
readme = "README.md"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Pure HUGR to LLVM IR compilation for PECOS quantum programs."

[dependencies]
log.workspace = true
pecos-core = { workspace = true, features = ["anyhow", "hugr-llvm"] }
tempfile.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
# HUGR dependencies
hugr-core = { version = "0.20.1" }
hugr-llvm = { version = "0.20.1" }
anyhow = { version = "1.0" }

[dev-dependencies]
tempfile.workspace = true
env_logger.workspace = true

[features]
default = []

[lints]
workspace = true