[package]
name = "pecos-hugr-llvm"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Pure HUGR to LLVM IR compilation for PECOS quantum programs."

[dependencies]
log.workspace = true
pecos-core = { workspace = true, features = ["anyhow", "hugr-llvm"] }
tempfile.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
typetag.workspace = true
regex.workspace = true
# HUGR dependencies
hugr-core.workspace = true
hugr-llvm.workspace = true
anyhow.workspace = true

[dev-dependencies]
tempfile.workspace = true

[features]
default = []

[lints]
workspace = true