[package]
name = "pecos-hugr-qis"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
description = "HUGR to QIS compiler for PECOS"
readme = "README.md"

[dependencies]
# Core dependencies
anyhow.workspace = true
log.workspace = true
serde_json.workspace = true

# PECOS dependencies
pecos-core = { workspace = true, features = ["anyhow"] }

# tket dependencies - exactly as Selene's hugr-qis
# LLVM features are required for this crate's core functionality
tket = { workspace = true, features = ["llvm"] }
tket-qsystem = { workspace = true, features = ["llvm"] }
# `hugr-llvm` only exposes plain `llvm21-1`; this keeps its transitive
# inkwell/llvm-sys build preferring libLLVM when a shared LLVM is available.
inkwell.workspace = true

[features]
default = []
# LLVM feature is a no-op since LLVM is always required for this crate.
# Kept for backwards compatibility with dependents that specify it.
llvm = []

[lints]
workspace = true
