[package]
name = "pecos-hugr"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
description = "HUGR (Hierarchical Unified Graph Representation) support for PECOS quantum programs."
readme = "README.md"

[[bin]]
name = "pecos-hugr-cli"
path = "src/bin/pecos-hugr-cli.rs"

[dependencies]
log.workspace = true
pecos-core = { workspace = true, features = ["anyhow", "hugr-llvm"] }
tempfile.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
typetag.workspace = true
regex.workspace = true
zstd.workspace = true
# HUGR dependencies
hugr-core.workspace = true
hugr-llvm.workspace = true
anyhow.workspace = true
clap = { version = "4.0", features = ["derive"] }

[dev-dependencies]
tempfile.workspace = true

[features]
default = []

[lints]
workspace = true
