[package]
name = "pecos-hugr"
version.workspace = true
edition.workspace = true
readme = "README.md"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Guppy HUGR interpreter engine for PECOS quantum simulator"

[features]
default = ["wasm"]
wasm = ["pecos-wasm/wasm"]

[dependencies]
# Logging
log.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Serialization
serde_json.workspace = true

# HUGR support
tket.workspace = true
tket-qsystem.workspace = true

# Workspace dependencies
pecos-core.workspace = true
pecos-engines.workspace = true
pecos-quantum = { workspace = true, features = ["hugr"] }
pecos-wasm = { workspace = true, optional = true }

[dev-dependencies]
tempfile.workspace = true
# For creating test HUGRs from DagCircuit
pecos-quantum = { workspace = true, features = ["hugr"] }
# For integration testing with quantum simulator
pecos-simulators.workspace = true
# For compiling WAT to WASM in tests
wat.workspace = true

[lints]
workspace = true
