[package]
name = "pecos-ldpc-decoders"
version.workspace = true
edition.workspace = true
readme.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
description = "LDPC decoder implementations for PECOS"

[dependencies]
pecos-decoder-core.workspace = true
ndarray.workspace = true
thiserror.workspace = true
cxx.workspace = true

[build-dependencies]
pecos-build-utils.workspace = true
cxx-build.workspace = true

[dev-dependencies]
rand.workspace = true

[lib]
name = "pecos_ldpc_decoders"

[lints]
workspace = true
