[package]
name = "pecos-llvm-sim"
version.workspace = true
edition.workspace = true
readme = "README.md"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Unified LLVM-based quantum simulation with support for multiple input formats (LLVM IR, HUGR) in PECOS."

[dependencies]
# Core dependencies
pecos-core = { workspace = true, features = ["anyhow"] }
pecos-engines = { workspace = true }
pecos-llvm-runtime = { workspace = true }
pecos-hugr-llvm = { workspace = true }

# Standard dependencies
log.workspace = true
tempfile.workspace = true
serde_json.workspace = true

# HUGR support
hugr-core = { version = "0.20.1" }

[dev-dependencies]
tempfile.workspace = true
serial_test.workspace = true

[features]
default = []

[lints]
workspace = true