[package]
name = "pecos-llvm-utils"
version.workspace = true
edition.workspace = true
description = "LLVM detection and utilities for PECOS"
readme.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["quantum", "llvm", "build-utils"]
categories = ["development-tools::build-utils"]

[[bin]]
name = "pecos-llvm"
path = "src/bin/pecos-llvm.rs"

[dependencies]
clap.workspace = true
reqwest.workspace = true
tar.workspace = true
dirs.workspace = true
xz2.workspace = true
sevenz-rust.workspace = true
sha2.workspace = true

[lints]
workspace = true
