[package]
name = "pecos-llvm"
version.workspace = true
edition.workspace = true
description = "Rust wrapper for LLVM IR generation using inkwell"
readme = "README.md"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
pecos-core.workspace = true

# Inkwell for LLVM IR generation
[dependencies.inkwell]
workspace = true
features = ["llvm14-0"]

[features]
default = []

[build-dependencies]
pecos-build.workspace = true
log.workspace = true
env_logger.workspace = true

[lints]
workspace = true
